<resources>
    <string name="app_name">oct26test1_lap</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_tab1">Pending</string>
    <string name="title_tab2">Finished</string>
    <string name="PendingFragment">This is Pending Fragment</string>
    <string name="OngoingFragment">This is Ongoing Fragment</string>
    <string name="FinishedFragment">This is Finished Fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="person_name">Person name</string>
    <string name="location">Location</string>
    <string name="pending">pending</string>
    <string name="address">Address</string>
    <string name="amount">Amount</string>
    <string name="Report">Report</string>
    <string name="Menu">Menu</string>
    <string name="this_is_report_fragment">This is Report Fragment</string>
    <string name="this_is_menu_fragment">This is Menu fragment</string>

    <string-array name="Locations">
        <item>Kollam</item>
        <item>Idukki</item>
        <item>Kottayam</item>
        <item>Alapuzha</item>
        <item>Thrissur</item>
        <item>Kannur</item>
        <item>Wayanad</item>
    </string-array>
    <string name="selected_item">Selected item:</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>